# django-ogc-sensorthings

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-requests.yml
.github/workflows/: publish.yaml  tests.yaml
example/example/: settings.py  urls.py
src/sensorthings/core/: __init__.py  conf.py  protocol.py  service.py
src/sensorthings/core/backends/: __init__.py  base.py
src/sensorthings/http/: __init__.py  navigation.py  response.py  router.py  validators.py
src/sensorthings/types/: __init__.py  absent.py  entity.py  iso_string.py  query.py
src/sensorthings/v1_0/: urls.py
src/sensorthings/v1_1/: apps.py  conf.py  http.py  iot.py  service.py  urls.py
src/sensorthings/v1_1/backends/: __init__.py  base.py
src/sensorthings/v1_1/backends/null/: adapter.py
src/sensorthings/v1_1/core/: __init__.py
src/sensorthings/v1_1/core/adapters/: __init__.py  base.py
src/sensorthings/v1_1/core/dto/: __init__.py  base.py  datastream.py  feature_of_interest.py  historical_location.py  location.py  observation.py  observed_property.py  query.py  thing.py  (+1 more)
src/sensorthings/v1_1/dto/: base.py  datastream.py  feature_of_interest.py  historical_location.py  location.py  observation.py  observed_property.py  query.py  sensor.py  thing.py
src/sensorthings/v1_1/http/: __init__.py  navigation.py  response.py
src/sensorthings/v1_1/protocol/: __init__.py  core.py  entity.py
src/sensorthings/v1_1/schemas/: __init__.py  base.py  datastream.py  factory.py  feature_of_interest.py  historical_location.py  location.py  observation.py  observed_property.py  sensor.py  thing.py
src/sensorthings/v1_1/views/: batch.py  datastream.py  feature_of_interest.py  historical_location.py  location.py  observation.py  observed_property.py  resolver.py  root.py  sensor.py  thing.py
src/sensorthings/versions/v1_1/: __init__.py  apps.py  conf.py  protocol.py  service.py  urls.py
src/sensorthings/versions/v2_0/: urls.py
tests/factories/v1_1/django/: __init__.py  datastream.py  feature_of_interest.py  historical_location.py  location.py  observation.py  observed_property.py  sensor.py  thing.py
tests/integration/v1_1/: conftest.py  test_create_entity.py  test_data_array.py  test_delete_entity.py  test_get_collection.py  test_get_entity.py  test_get_root.py  test_query_params.py  test_update_entity.py
tests/unit/: test_absent_type.py  test_entity_type.py  test_iso_string_type.py
(+103 files in other folders)
