[metadata]
name = django-sensorthings
version = 1.0.0

[options]
python_requires = >=3.10
package_dir=
    =src
packages = find:
zip_safe = True
install_requires =
    django >= 4.2
    django-ninja >= 1.0
    pydantic >= 2.7,!=2.12.0,!=2.12.1,!=2.12.2
    odata-query >= 0.10
    uuid_utils >= 0.6.0

[options.packages.find]
where=src
