[metadata]
name = django-ogc-sensorthings
version = 1.0.0
description = A Django extension for implementing the OGC SensorThings API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hydroserver2/django-ogc-sensorthings
project_urls =
    Source = https://github.com/hydroserver2/django-ogc-sensorthings
    Issues = https://github.com/hydroserver2/django-ogc-sensorthings/issues

[options]
python_requires = >=3.10
package_dir=
    =src
packages = find:
zip_safe = True
install_requires =
    django >= 4.2
    django-ninja >= 1.0
    pydantic >= 2.7,!=2.12.0,!=2.12.1,!=2.12.2
    odata-query >= 0.10
    uuid_utils >= 0.6.0

[options.packages.find]
where=src
