[metadata]
name = django-ogc-sensorthings
version = 1.1.0
description = A Django extension for implementing the OGC SensorThings API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hydroserver2/django-ogc-sensorthings
project_urls =
    Source = https://github.com/hydroserver2/django-ogc-sensorthings
    Issues = https://github.com/hydroserver2/django-ogc-sensorthings/issues
author = Kenneth Lippold
author_email = kenneth.lippold@usu.edu
license = BSD-3-Clause
keywords = django, sensorthings, ogc, iot, api, rest
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3.10
package_dir=
    =src
packages = find:
zip_safe = True
install_requires =
    django >= 4.2
    django-ninja >= 1.0
    pydantic >= 2.7,!=2.12.0,!=2.12.1,!=2.12.2
    odata-query >= 0.10
    uuid_utils >= 0.6.0

[options.packages.find]
where=src
